# proc-macro-workshop

bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 01-parse-header.rs  06-init-array.rs  06-make-work-in-function.rs  09-interaction-with-macrorules.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 06-pattern-path.stderr
