[package]
name = "bitfield"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[[bin]]
name = "test03"
path = "tests/03-accessors.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
seq = {path = "../seq" }
